Further fixes. Ear now deploys and runs